# super-scribblenauts-re

./: .gitignore  LICENSE  README.md  build-docs.sh  ida-re-export.py
asmhacks/: Makefile  README.md  arm9.json
asmhacks/asmhacks/: adjread.c  extraobjadj.c  loop.c  maxwelljump.c  midas.c  objadj.c  objread.c  particle.c  test.c
asmhacks/include/: asmhack-base.h
asmhacks/source/: asmhack-base.c
bh2p-docs/: mkdocs.yml
bh2p-docs/docs/: fs.md  index.md  lang.md
bh2p-docs/docs/files/: input-dictionary.md
bh2p-docs/docs/game/: font.md  gui.md  sprite.md  text-list.md
bh2putil/: CMakeLists.txt
bh2putil/source/: main.cpp  old.cpp
docs/: 404.html  index.html  sitemap.xml
docs/fs/: index.html
docs/lang/: index.html
docs/objgen-en/: $ADJECTIVE1.html  $ADJECTIVE2.html  $ADJECTIVE3.html  $DESTINY.html  $MAXWELL.html  $ME.html  $MYOBJECT.html  $STAGEOBJECT.html  $STARITE.html  @ACACIATREEBOTTOM.html  @ACACIATREETOP.html  @ADMIRAL.html  @ALERCEBOTTOM.html  @ALERCETOP.html  @ARCH LEFT.html  @ARCH RIGHT.html  @ARROWDOUBLE.html  @ARROWEND.html  @ARROWMIDDLE.html  @ARTIST.html  @AWNINGLEFT.html  @AWNINGRIGHT.html  @BABA YAGA.html  @BALL AND CHAIN END.html  @BALL AND CHAIN.html  @BALLET DANCER.html  @BAMBOOBOTTOM.html  @BAMBOOTOP.html  @BAOBOBBOTTOM.html  @BAOBOBTOP.html  @BARB WIRE END.html  @BARB WIRE.html  @BARRIER ROPE END.html  @BARRIER ROPE.html  @BASKETBALL PLAYER.html  @BELT END.html  @BELT.html  @BENJAMIN FRANKLIN.html  @BIRCHBOTTOM.html  @BIRCHTOP.html  (+24627 more)
docs/search/: search_index.json
re-export/: bh2p-eu-symbols.x
re-export/include/: bh2p-eu-types.h  bh2p-eu.h
re-export/source/: bh2p-eu-thumb-wrappers.s
scribbletool/: CMakeLists.txt
scribbletool/data/: data.h.in  index.html  obj.html  search.js
scribbletool/include/: common.hpp  data.h
scribbletool/include/cli/: cli_ExportTexture.hpp  cli_ObjectsHtml.hpp  cli_PrintMisc.hpp  cli_PrintObject.hpp
scribbletool/source/: main.cpp
scribbletool/source/cli/: cli_ExportTexture.cpp  cli_ObjectsHtml.cpp  cli_PrintMisc.cpp  cli_PrintObject.cpp
(+52 files in other folders)
